--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "live-server .",
     "preview": "http-serve -p 8080 .",
     "build": "node build.js",
+    "run": "dotenv -e .env -- node scripts/codex.js \"$PROMPT\"",
     "lint": "htmlhint '**/*.html' && stylelint '**/*.css' && eslint '**/*.js'",
     "minify:html": "html-minifier-terser --collapse-whitespace --remove-comments -o dist/ %s",
     "minify:css": "cleancss -o dist/style.min.css style.css",
@@ -26,7 +27,9 @@
     "lighthouse": "^12.6.1",
     "pa11y": "^8.0.0",
     "linkinator": "^6.1.2",
-    "sitemap-generator": "^8.5.1"
+    "sitemap-generator": "^8.5.1",
+    "dotenv-cli": "^8.0.0",
+    "openai": "^5.3.0"
   },
   "engines": {
     "node": ">=22"
