--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "minitools-universe",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Static HTML tool suite with dev helpers",
   "scripts": {
     "serve": "live-server .",
     "preview": "http-serve -p 8080 .",
-    "build": "node build.js",
+    "build": "tailwindcss -m -o style.min.css",
     "run": "dotenv -e .env -- node scripts/codex.js \"$PROMPT\"",
     "lint": "htmlhint '**/*.html' && stylelint '**/*.css' && eslint '**/*.js'",
     "minify:html": "html-minifier-terser --collapse-whitespace --remove-comments -o dist/ %s",
@@ -29,9 +29,11 @@
     "linkinator": "^6.1.2",
     "sitemap-generator": "^8.5.1",
     "dotenv-cli": "^8.0.0",
-    "openai": "^5.3.0"
+    "openai": "^5.3.0",
+    "@tailwindcss/cli": "^0.1.0",
+    "tailwindcss": "^3.4.4"
   },
   "engines": {
-    "node": ">=22"
+    "node": ">=20"
   }
 }
