--- a/package.json
+++ b/package.json
@@ -1,46 +1,27 @@
 {
-  "name": "minitools-universe",
-  "version": "0.1.3",
-  "description": "Static HTML tool suite with dev helpers",
+  "name": "tools-website",
+  "version": "0.1.0",
+  "private": true,
+  "description": "Tools Website - Static site with Tailwind CSS and linters",
   "scripts": {
-    "serve": "live-server .",
-    "preview": "http-serve -p 8080 .",
-    "build": "tailwindcss -m -o style.min.css",
-
-    "run": "dotenv -e .env -- node scripts/codex.js \"$PROMPT\"",
-
-    "lint:html": "htmlhint '**/*.html'",
-    "lint:css":  "stylelint '**/*.css'",
-    "lint:js":   "eslint '**/*.{js,jsx}'",
-    "lint":      "npm run lint:html && npm run lint:css && npm run lint:js",
-    "lint:js:fix": "eslint --fix '**/*.{js,jsx}'",
-
-    "minify:html": "html-minifier-terser --collapse-whitespace --remove-comments -o dist/ %s",
-    "minify:css":  "cleancss -o dist/style.min.css style.css",
-    "minify:js":   "terser --compress --mangle -o dist/app.min.js -- app.js",
-
-    "audit":        "lighthouse http://localhost:8080 --chrome-flags='--headless' --only-categories=performance,accessibility,seo",
-    "accessibility": "pa11y http://localhost:8080",
-    "check-links":   "linkinator http://localhost:8080 --recurse"
+    "lint:js": "eslint .",
+    "lint:css": "stylelint \"**/*.css\"",
+    "lint:html": "htmlhint \"**/*.html\"",
+    "lint": "npm run lint:js && npm run lint:css && npm run lint:html",
+    "build": "mkdir -p dist/css && tailwindcss -c tailwind.config.js -i src/styles/tailwind.css -o dist/css/styles.css --minify",
+    "start": "http-server dist -p 8080"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
     "eslint": "^9.29.0",
-    "stylelint": "^16.20.0",
-    "htmlhint": "^1.3.0",
-    "live-server": "^1.2.2",
-    "http-serve": "^1.0.0",
-    "html-minifier-terser": "^7.2.0",
-    "clean-css-cli": "^5.6.3",
-    "terser": "^5.42.0",
-    "lighthouse": "^12.6.1",
-    "pa11y": "^8.0.0",
-    "linkinator": "^6.1.2",
-    "sitemap-generator": "^8.5.1",
-    "dotenv-cli": "^8.0.0",
-    "openai": "^5.3.0",
-
-    "@tailwindcss/cli": "^0.1.0",
-    "tailwindcss": "^3.4.10"
-  },
-  "engines": { "node": ">=20" }
+    "globals": "^16.2.0",
+    "stylelint": "^16.15.0",
+    "stylelint-config-standard": "^38.0.0",
+    "htmlhint": "^1.5.1",
+    "tailwindcss": "^4.1.0",
+    "postcss": "^8.5.5",
+    "autoprefixer": "^10.4.21",
+    "pa11y": "^9.0.0",
+    "http-server": "^14.1.1"
+  }
 }
