--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "postcss": "^8.4.38",
     "autoprefixer": "^10.4.21",
     "http-server": "^14.1.1",
-    "pa11y": "^9.0.0"
+    "pa11y": "^9.0.0",
+    "esbuild": "^0.20.0",
+    "workbox-cli": "^7.0.0"
   }
 }
