--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Static toolkit site (Tailwind CSS + ESLint v9 + Stylelint)",
   "scripts": {
     "lint:js": "eslint .",
-    "lint:css": "stylelint \"**/*.css\"",
+    "lint:css": "stylelint \"**/*.css\" --allow-empty-input",
     "lint:html": "htmlhint \"**/*.html\"",
     "lint": "npm run lint:js && npm run lint:css && npm run lint:html",
     "build": "mkdir -p dist/css && npx tailwindcss -c tailwind.config.js -i src/styles/tailwind.css -o dist/css/styles.css --minify",
