--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install Python deps
+        run: pip install -r requirements.txt
+
       - name: Install dependencies
         run: npm ci
 
@@ -31,6 +34,9 @@ jobs:
 
       - name: Build project
         run: npm run build
+
+      - name: Validate HTML
+        run: html5validator --config .html5validator.yml index.html tools/*/index.html
 
       - name: Accessibility check (Pa11y)
         run: |
