--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,16 @@ requests==2.32.3        # works with urllib3 2.3.x
 
 # Image processing
 pillow==11.2.1
+
+# Docs & build helpers
+mkdocs==1.6.1
+jinja2==3.1.6
+markdown==3.8
+python-slugify==8.0.4
+
+# CLI & HTTP utilities
+httpx==0.28.1
+typer==0.16.0
+
+# Testing
+pytest==8.4.0
