Add linkinator link check

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:html": "htmlhint \"**/*.html\"",
     "lint": "npm run lint:js && npm run lint:css && npm run lint:html",
     "build": "mkdir -p dist/css vendor/workbox && cp node_modules/workbox-sw/build/workbox-sw.js vendor/workbox/workbox-sw.js && npx tailwindcss -c tailwind.config.js -i src/styles/tailwind.css -o dist/css/styles.css --minify && node scripts/build-search-index.js && cp index.html manifest.webmanifest robots.txt sitemap.xml style.min.css dark.min.css tools.css mini.js app.min.js db.js sw.js search.js search-index.json dist/ && cp -r tools vendor dist/",
-    "start": "http-server dist -p 8080"
+    "start": "http-server dist -p 8080",
+    "check-links": "linkinator dist/index.html --recurse --skip '^(?!http://localhost)' --skip mailto: --verbosity error"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -25,6 +26,7 @@
     "pa11y": "^9.0.0",
     "esbuild": "^0.20.0",
     "workbox-cli": "^7.0.0",
-    "fuse.js": "^7.0.0"
+    "fuse.js": "^7.0.0",
+    "linkinator": "^6.1.2"
   }
 }
