--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "autoprefixer": "^10.4.21",
+    "esbuild": "^0.25.5",
     "eslint": "^9.29.0",
+    "fuse.js": "^7.0.0",
     "globals": "^16.2.0",
+    "htmlhint": "^1.5.1",
+    "http-server": "^14.1.1",
+    "linkinator": "^6.1.2",
+    "pa11y": "^9.0.0",
+    "postcss": "^8.4.38",
     "stylelint": "^16.15.0",
     "stylelint-config-standard": "^38.0.0",
-    "htmlhint": "^1.5.1",
     "tailwindcss": "^3.4.4",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.21",
-    "http-server": "^14.1.1",
-    "pa11y": "^9.0.0",
-    "esbuild": "^0.20.0",
-    "workbox-cli": "^7.0.0",
-    "fuse.js": "^7.0.0",
-    "linkinator": "^6.1.2"
+    "workbox-cli": "^7.3.0"
   }
 }
