--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "stylelint": "^16.15.0",
     "stylelint-config-standard": "^38.0.0",
     "tailwindcss": "^3.4.4",
-    "workbox-cli": "^7.3.0"
+    "workbox-cli": "^7.3.0",
+    "daisyui": "^5.0.43"
   }
 }
