--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "autoprefixer": "^10.4.21",
+    "daisyui": "^5.0.43",
     "esbuild": "^0.25.5",
     "eslint": "^9.29.0",
     "fuse.js": "^7.0.0",
@@ -27,8 +28,7 @@
     "postcss": "^8.4.38",
     "stylelint": "^16.15.0",
     "stylelint-config-standard": "^38.0.0",
-    "tailwindcss": "^3.4.4",
-    "workbox-cli": "^7.3.0",
-    "daisyui": "^5.0.43"
+    "tailwindcss": "^3.4.17",
+    "workbox-cli": "^7.3.0"
   }
 }
